fix spacing on journey container for proper topBar scrolling

--- a/src/components/Journey/my-journey.scss
+++ b/src/components/Journey/my-journey.scss
@@ -103,6 +103,7 @@
     font-family: 'Montserrat';
 
     padding-bottom: 10px;
+    padding-top: 50px;
     margin-bottom: 25px;
     border-bottom: 2px solid var(--gray);
   }
