--- a/src/components/MyWork/my-work.scss
+++ b/src/components/MyWork/my-work.scss
@@ -5,7 +5,7 @@
 
   align-items: center;
 
-  padding: 50px 0;
+  padding: 50px 0 0 0;
 
   .title {
     font-size: 48px;
